# Vision.Poker

./: .env.example  .gitignore  CLAUDE.md  Install Vision Poker.command  README.md  Run Vision Poker Live Readiness.command  __main__.py  app.py  install.py  pyproject.toml  requirements.txt  run.command  setup_app.py
backend/: .env.example  requirements.txt
capture/: __init__.py  frame_buffer.py  screen.py  window_finder.py
config/: settings.py
docs/: backend.md  card-reading-strategy.md  compliance-due-diligence.md  dev-setup.md  distribution.md  environment.md  functional-roadmap.md  licensing.md  live-3-analysis.md  live-4-analysis.md  live-table-reader-validation-plan.md  quickstart.md  stripe.md
engine/: __init__.py  draws.py  equity.py  ev.py  models.py  pot_odds.py
installer/: __init__.py  wizard.py
licensing/: __init__.py  dialogs.py  storage.py  validator.py
overlay/: __init__.py  hud.py  styles.qss  widgets.py
pipeline/: __init__.py  ipc.py  runner.py  stability.py
tests/: __init__.py  test_action_reader.py  test_bootstrap_annotations.py  test_card_detector.py  test_draws.py  test_equity.py  test_ev.py  test_fixture_intake.py  test_hud_formatting.py  test_live_readiness_gate.py  test_live_regression_report.py  test_live_screen_hud.py  test_ocr.py  test_pipeline_runner.py  test_pokerstars_live_templates.py  test_pot_odds.py  test_replay_hud.py  test_stability.py  test_state_parser.py
tools/: __init__.py  annotate.py  bootstrap_annotations.py  calibrate_roi.py  card_slot_diagnostics.py  debug_frame.py  extract_ocr_templates.py  fixture_intake.py  (+8 more)
(+65 files in other folders)
