[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-vision-overlay"
version = "0.1.0"
description = "Real-time screen reading HUD for poker game state analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Research Project"}
]

dependencies = [
    "mss>=9.0.1",
    "pygetwindow>=0.0.9; sys_platform == 'win32'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pydantic-settings>=2.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "httpx>=0.25.0",
    "easyocr>=1.7",
    "ultralytics>=8.0",
    "imagehash>=4.3",
    "phevaluator>=0.5",
    "PyQt6>=6.5",
    "rumps>=0.4.0; sys_platform == 'darwin'",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[project.scripts]
poker-hud = "pipeline.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["capture*", "vision*", "engine*", "overlay*", "pipeline*", "config*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
